tests/NormalTests/paczka2/big_fuzzy/15774479.err
Error in line 4: ZEJrPlFu S537 4,0
Error in line 16: kDl4m5 S410 44,5
Error in line 27: S745 S410 143,6
Error in line 28: w1YAjh3h1 S745 30,1
Error in line 43: S745 S537 37,5
Error in line 44: S745 S745 70,0
Error in line 45: S745 A392 27,9
Error in line 38: kDl4m5 S745 16,8
Error in line 49: S745 S410 88,9
Error in line 53: kDl4m5 S410 4,9
Error in line 60: Tbaqt188XKX S745 10,3
Error in line 54: w1YAjh3h1 S410 105,1
Error in line 66: w1YAjh3h1 S745 96,9
Error in line 76: 57crc A392 15,6
Error in line 80: 6rmVAOSNF A392 -2,0
Error in line 77: 57crc S410 86,5
Error in line 84: 6rmVAOSNF S410 18,0
Error in line 74: ZEJrPlFu S537 11,0
Error in line 118: kDl4m5 S410 91,8
Error in line 130: S745 S410 9,1
Error in line 140: kDl4m5 S745 98,80
Error in line 133: kDl4m5 A392 28,0
Error in line 143: 57crc S745 11,o
Error in line 138: 57crc S537 4,8
Error in line 145: 57crc S745 53,3
Error in line 146: 57crc S410 89,7
Error in line 152: Tbaqt188XKX S537 85,8
Error in line 142: kDl4m5 S745 425,3
Error in line 176: 57crc S745 154,7
Error in line 174: S745 S745 43,2
Error in line 171: Tbaqt188XKX S410 181,4
Error in line 194: kDl4m5 S745 56,1
Error in line 197: kDl4m5 A392 40,8
Error in line 205: kDl4m5 S410 83,3
Error in line 188: w1YAjh3h1 A392 91,2
Error in line 206: kDl4m5 A392 17,1
Error in line 209: S745 A392 63,5
Error in line 201: ZEJrPlFu S537 329,4
Error in line 230: 6rmVAOSNF S410 63,4
Error in line 225: ZEJrPlFu A392 39,3
Error in line 235: w1YAjh3h1 A392 5,2
Error in line 245: w1YAjh3h1 S410 29,7
